unpackaged/main/default/objects/Account/fields/About_us__c.field-meta.xml
<CustomField>
    <fullName>About_us__c</fullName>
    <label>About us</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>