unpackaged/main/default/objects/Account/fields/Account_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_2__c</fullName>
    <description>Displays Account Manager in SEO Fields Section</description>
    <formula>Account_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(B) Account Manager</label>
    <type>Text</type>
</CustomField>