unpackaged/main/default/objects/Account/fields/Active_listings__c.field-meta.xml
<CustomField>
    <fullName>Active_listings__c</fullName>
    <label>(MLS) Active listings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>