unpackaged/main/default/objects/Account/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assistant Executive</inlineHelpText>
    <label>AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>