unpackaged/main/default/objects/Account/fields/AE_IM_Passoff__c.field-meta.xml
<CustomField>
    <fullName>AE_IM_Passoff__c</fullName>
    <inlineHelpText>Rate 0 to 4</inlineHelpText>
    <label>AE &lt;&gt; IM Passoff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>