unpackaged/main/default/objects/Account/fields/AE_old__c.field-meta.xml
<CustomField>
    <fullName>AE_old__c</fullName>
    <label>[SYSTEM] AE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>