unpackaged/main/default/objects/Account/fields/Amount_of_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Opportunity_Products__c</fullName>
    <label>Amount of Opportunity Products</label>
    <summarizedField>Opportunity.Amount_of_Products__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>