unpackaged/main/default/objects/Account/fields/Asana_Notes_LInk__c.field-meta.xml
<CustomField>
    <fullName>Asana_Notes_LInk__c</fullName>
    <label>Asana Notes LInk</label>
    <type>Url</type>
</CustomField>