unpackaged/main/default/objects/Account/fields/Average_home_price_is_500k__c.field-meta.xml
<CustomField>
    <fullName>Average_home_price_is_500k__c</fullName>
    <description>Case Number: 00088509</description>
    <label>Average home price is $500k+</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>