unpackaged/main/default/objects/Account/fields/Average_Transactions_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Transactions_Year__c</fullName>
    <description>Case Number: 00088509</description>
    <label>Average Transactions/Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>