unpackaged/main/default/objects/Account/fields/Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <infoMessage>Select a contact that is associated with this account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Broker Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>