unpackaged/main/default/objects/Account/fields/Broker_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact_Email__c</fullName>
    <label>Broker Contact Email</label>
    <type>Email</type>
</CustomField>