unpackaged/main/default/objects/Account/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>