unpackaged/main/default/objects/Account/fields/Brokerages__c.field-meta.xml
<CustomField>
    <fullName>Brokerages__c</fullName>
    <label>Brokerages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Christie&#39;s International</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Brand</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Luxury</fullName>
            </value>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>Corcoran Brand</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s Affliate</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s Brand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>