unpackaged/main/default/objects/Account/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>Used for client-facing automated reporting</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>