unpackaged/main/default/objects/Account/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <label>Client Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>