unpackaged/main/default/objects/Account/fields/Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Closed_date__c</fullName>
    <label>Closed date</label>
    <type>Date</type>
</CustomField>