unpackaged/main/default/objects/Account/fields/Collections_Stage__c.field-meta.xml
<CustomField>
    <fullName>Collections_Stage__c</fullName>
    <label>Collections Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Day</fullName>
            </value>
            <value>
                <fullName>60 Day</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
            </value>
            <value>
                <fullName>90+ Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>