unpackaged/main/default/objects/Account/fields/Company_domain_name__c.field-meta.xml
<CustomField>
    <fullName>Company_domain_name__c</fullName>
    <inlineHelpText>The domain name of the company or organization</inlineHelpText>
    <label>Company Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>