unpackaged/main/default/objects/Account/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content</label>
    <type>Checkbox</type>
</CustomField>