unpackaged/main/default/objects/Account/fields/CSM_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>CSM_Assigned_Date__c</fullName>
    <description>Case # 00168772 - needed for CSM dashboards and productivity measuring</description>
    <label>CSM Assigned Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>