unpackaged/main/default/objects/Account/fields/Dashboard_to_make_edits__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_to_make_edits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the client want to use our dashboard to make edits to the website?</inlineHelpText>
    <label>Dashboard to Make Edits</label>
    <type>Checkbox</type>
</CustomField>