unpackaged/main/default/objects/Account/fields/Dashboard_version__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_version__c</fullName>
    <label>Dashboard Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keystone</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>