unpackaged/main/default/objects/Account/fields/DCSM_Email_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>DCSM_Email_Campaigns__c</fullName>
    <description>DCSM Experiment email campaign tracking</description>
    <inlineHelpText>DCSM Experiment email campaign tracking</inlineHelpText>
    <label>DCSM Email Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DCSM group A outreach</fullName>
            </value>
            <value>
                <fullName>OWL 5 site optimizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>