unpackaged/main/default/objects/Account/fields/DCSM_Engaged__c.field-meta.xml
<CustomField>
    <fullName>DCSM_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify whether the account has met with a DCSM and pull specific reports based on whether this field is ‘true’ or ‘false’.</description>
    <label>DCSM Engaged</label>
    <type>Checkbox</type>
</CustomField>