unpackaged/main/default/objects/Account/fields/DCSM_Experiment__c.field-meta.xml
<CustomField>
    <fullName>DCSM_Experiment__c</fullName>
    <description>Digital CSM Experiment marker for test accounts</description>
    <inlineHelpText>This field is used to track Accounts for the Digital CSM Experiment.</inlineHelpText>
    <label>DCSM Experiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCSM Experiment A</fullName>
            </value>
            <value>
                <fullName>DCSM Experiment B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>