unpackaged/main/default/objects/Account/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <label>Delete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[In progress] AR - Northwest Arkansas Board of REALTORS MLS (NWAR)</fullName>
            </value>
            <value>
                <fullName>[In progress] WI - REALTOR Association of Northeast Wisconsin (RANW)</fullName>
            </value>
            <value>
                <fullName>AK - Alaska Multiple Listing Service, Inc. (AMLS)</fullName>
            </value>
            <value>
                <fullName>AL - Baldwin County Association of REALTORS (BCAR)</fullName>
            </value>
            <value>
                <fullName>AL - Valley MLS (NALMLS)</fullName>
            </value>
            <value>
                <fullName>AR - Cooperative Arkansas (CARMLS)</fullName>
            </value>
            <value>
                <fullName>AZ - Arizona Regional MLS (ARMLS)</fullName>
            </value>
            <value>
                <fullName>AZ - Sedona Verde Valley (SVVAOR)</fullName>
            </value>
            <value>
                <fullName>AZ - Southern Arizona MLS (TAR)</fullName>
            </value>
            <value>
                <fullName>AZ - Tucson AoR (TAR)</fullName>
            </value>
            <value>
                <fullName>Bermuda SIR</fullName>
            </value>
            <value>
                <fullName>BNAR - Buffalo Niagara Association of REALTORS</fullName>
            </value>
            <value>
                <fullName>CA - Bakersfield Association of REALTORS (BAOR)</fullName>
            </value>
            <value>
                <fullName>CA - Bay Area Real Estate Information Services (BAREIS)</fullName>
            </value>
            <value>
                <fullName>CA - Bay East AoR (BEAR)</fullName>
            </value>
            <value>
                <fullName>CA - Big Bear Association of REALTORS (BBAR)</fullName>
            </value>
            <value>
                <fullName>CA - Bridge MLS (EBRD)</fullName>
            </value>
            <value>
                <fullName>CA - California Regional MLS (CRMLS)</fullName>
            </value>
            <value>
                <fullName>CA - Combined LA/Westside MLS (CLAW)</fullName>
            </value>
            <value>
                <fullName>CA - Conejo Simi Moorpark (CSMAR)</fullName>
            </value>
            <value>
                <fullName>CA - Contra Costa Association of Realtors (CCAR)</fullName>
            </value>
            <value>
                <fullName>CA - Desert Area MLS / CDAR (DAMLS)</fullName>
            </value>
            <value>
                <fullName>CA - Fresno Association of REALTORS (FMLS)</fullName>
            </value>
            <value>
                <fullName>CA - Idyllwild Association of Realtors</fullName>
            </value>
            <value>
                <fullName>CA - MetroList MLS</fullName>
            </value>
            <value>
                <fullName>CA - MLSListings, Inc.</fullName>
            </value>
            <value>
                <fullName>CA - North Santa Barbara County Regional MLS (NSBCRMLS)</fullName>
            </value>
            <value>
                <fullName>CA - Pasadena-Foothills AoR (CRMLS)</fullName>
            </value>
            <value>
                <fullName>CA - Rim O&#39; the World Association of REALTORS (ROTWAR)</fullName>
            </value>
            <value>
                <fullName>CA - San Diego MLS (SDMLS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>