unpackaged/main/default/objects/Account/fields/Design_Quiz_Completed__c.field-meta.xml
<CustomField>
    <fullName>Design_Quiz_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Quiz Completed</label>
    <type>Checkbox</type>
</CustomField>