unpackaged/main/default/objects/Account/fields/Design_quiz_sent__c.field-meta.xml
<CustomField>
    <fullName>Design_quiz_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design quiz sent</label>
    <type>Checkbox</type>
</CustomField>