unpackaged/main/default/objects/Account/fields/Disruptor_Package__c.field-meta.xml
<CustomField>
    <fullName>Disruptor_Package__c</fullName>
    <label>Disruptor Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Listing Concierge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>