unpackaged/main/default/objects/Account/fields/Domain_Authority__c.field-meta.xml
<CustomField>
    <fullName>Domain_Authority__c</fullName>
    <label>Domain Authority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>