unpackaged/main/default/objects/Account/fields/Exclusivities__c.field-meta.xml
<CustomField>
    <fullName>Exclusivities__c</fullName>
    <label>Exclusivities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>