unpackaged/main/default/objects/Account/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>