unpackaged/main/default/objects/Account/fields/Facebook_company_page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_company_page__c</fullName>
    <label>Facebook Company Page</label>
    <type>Url</type>
</CustomField>