unpackaged/main/default/objects/Account/fields/Facebook_fans__c.field-meta.xml
<CustomField>
    <fullName>Facebook_fans__c</fullName>
    <label>Facebook Fans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>