unpackaged/main/default/objects/Account/fields/GA_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>GA_Login_Email__c</fullName>
    <label>GA Login Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>