unpackaged/main/default/objects/Account/fields/GBP_link__c.field-meta.xml
<CustomField>
    <fullName>GBP_link__c</fullName>
    <label>GBP link</label>
    <type>Url</type>
</CustomField>