unpackaged/main/default/objects/Account/fields/GBP_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>GBP_Login_Email__c</fullName>
    <label>GBP Login Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>seo@luxurypresence.com</fullName>
            </value>
            <value>
                <fullName>luxurypresenceseo@gmail.com</fullName>
            </value>
            <value>
                <fullName>seogbp@luxurypresence.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>