unpackaged/main/default/objects/Account/fields/GBP_Review_link__c.field-meta.xml
<CustomField>
    <fullName>GBP_Review_link__c</fullName>
    <label>GBP Review link</label>
    <type>Url</type>
</CustomField>