unpackaged/main/default/objects/Account/fields/GBP_Status1__c.field-meta.xml
<CustomField>
    <fullName>GBP_Status1__c</fullName>
    <label>GBP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Needs Verification</fullName>
            </value>
            <value>
                <fullName>GBP Suspended</fullName>
            </value>
            <value>
                <fullName>GBP Verified</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>