unpackaged/main/default/objects/Account/fields/GBP_Status3__c.field-meta.xml
<CustomField>
    <fullName>GBP_Status3__c</fullName>
    <label>GBP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>GBP Set Up</fullName>
            </value>
            <value>
                <fullName>Waiting on Verification</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>GBP Suspended</fullName>
                <isActive>false</isActive>
                <label>GBP Suspended</label>
            </value>
            <value>
                <fullName>GBP Verified</fullName>
                <isActive>false</isActive>
                <label>GBP Verified</label>
            </value>
            <value>
                <fullName>Needs Verification</fullName>
                <isActive>false</isActive>
                <label>Needs Verification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>