unpackaged/main/default/objects/Account/fields/GBP_Status__c.field-meta.xml
<CustomField>
    <fullName>GBP_Status__c</fullName>
    <label>GBP Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>