unpackaged/main/default/objects/Account/fields/Google_Folder__c.field-meta.xml
<CustomField>
    <fullName>Google_Folder__c</fullName>
    <label>Google Folder</label>
    <type>TextArea</type>
</CustomField>