unpackaged/main/default/objects/Account/fields/Google_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_Score__c</fullName>
    <inlineHelpText>Score should be on a scale of 1-5</inlineHelpText>
    <label>Google Review Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>