unpackaged/main/default/objects/Account/fields/GSC__c.field-meta.xml
<CustomField>
    <fullName>GSC__c</fullName>
    <description>Google Analytics are consolidated to 1 account, but GSC needs to be searchable by the SEO, Support, and Analytics Teams</description>
    <inlineHelpText>Google Search Console</inlineHelpText>
    <label>GSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>