unpackaged/main/default/objects/Account/fields/Has_made_some_attempt_time_at__c.field-meta.xml
<CustomField>
    <fullName>Has_made_some_attempt_time_at__c</fullName>
    <description>Case Number: 00088509</description>
    <label>Made attempts at an online presence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>