unpackaged/main/default/objects/Account/fields/High_Touch__c.field-meta.xml
<CustomField>
    <fullName>High_Touch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This should only be checked for high-touch content clients. Refer to criteria for high-touch clients prior to checking.</inlineHelpText>
    <label>High Touch</label>
    <type>Checkbox</type>
</CustomField>