unpackaged/main/default/objects/Account/fields/Hubspot_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Company ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>