unpackaged/main/default/objects/Account/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>