unpackaged/main/default/objects/Account/fields/Keyword_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyword Analysis</label>
    <type>Checkbox</type>
</CustomField>