unpackaged/main/default/objects/Account/fields/Keyword_Analysis_Done__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Analysis_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyword Analysis Done</label>
    <type>Checkbox</type>
</CustomField>