unpackaged/main/default/objects/Account/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Evangelist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>