unpackaged/main/default/objects/Account/fields/LinkedIn_bio__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_bio__c</fullName>
    <label>LinkedIn Bio</label>
    <type>Url</type>
</CustomField>