unpackaged/main/default/objects/Account/fields/LinkedIn_company_page__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_company_page__c</fullName>
    <label>LinkedIn Company Page</label>
    <type>Url</type>
</CustomField>