unpackaged/main/default/objects/Account/fields/Located_in_a_high_end_market__c.field-meta.xml
<CustomField>
    <fullName>Located_in_a_high_end_market__c</fullName>
    <description>Case Number: 00088509</description>
    <inlineHelpText>Relative to median home prices</inlineHelpText>
    <label>Located in a high-end market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>