unpackaged/main/default/objects/Account/fields/Marketing_Brief__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief__c</fullName>
    <label>Marketing Brief</label>
    <type>Url</type>
</CustomField>