unpackaged/main/default/objects/Account/fields/Marketing_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Checklist__c</fullName>
    <label>Marketing Checklist</label>
    <type>Url</type>
</CustomField>