unpackaged/main/default/objects/Account/fields/Marketing_Subscription_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Subscription_Payment_Term__c</fullName>
    <label>Marketing Subscription Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>No marketing subscription</fullName>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
                <isActive>false</isActive>
                <label>Semi Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>